add project expanding cards

--- a/counter/index.html
+++ b/counter/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style-practice.css" />
+        <link rel="stylesheet" href="style.css" />
         <title>Animated Countdown</title>
     </head>
     <body>
@@ -18,6 +18,6 @@
                 <button ID="replay">Hit to Start</button>
             </div>
         </div>
-        <script src="script-practice.js" defer></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
